# Iterative-Feedback-Refinement

./: README.md  pyproject.toml
clinical_summ_eval/evaluation/: aggregate.py  compression_ratios.py  config.py  custom_metric.py  eval_logging.py  flatten.py  io_utils.py  metrics_deepeval.py  metrics_selfcheck.py  run_deepeval.py  run_selfcheck.py
clinical_summ_eval/generation/: baseline_bert_centroid.py  baseline_cot_abstractive.py  baseline_oneshot_icl.py  baseline_standard_abstractive.py  pipeline.py  sglang_client.py
datasets/: cluster_testing_data.csv  cluster_training_data.csv
scripts/: run_all_selfcheck.sh
